--- a/index.html
+++ b/index.html
@@ -199,7 +199,18 @@
               <img class="portfolio__img" alt="portfolio item" />
             </picture>
            </div>
-          
+           <div class="portfolio__item">
+            <picture>
+              <source type="image/jpeg" srcset="img/foto10.jpg" />
+              <img class="portfolio__img" alt="portfolio item" />
+            </picture>
+           </div>
+           <div class="portfolio__item">
+            <picture>
+              <source type="image/jpeg" srcset="img/foto11.jpg" />
+              <img class="portfolio__img" alt="portfolio item" />
+            </picture>
+           </div>
           
           </div>
          </div>
