--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
       content="En esta tierra. Departamentos en Villa Gesell, Argentina, complejo turistico."
     />
     <meta
+    name="author"
+    content="Matias Aratano | Frontend Developer"
+     />
+    <meta
       property="og:description"
       content="En esta tierra. Departamentos en Villa Gesell, Argentina, complejo turistico. "
     />
@@ -15,7 +19,7 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:site_name"
-      content="Matias Aratano | Frontend Developer"
+      content="En esta tierra | Villa Gesell"
     />
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png" />
     <link rel="stylesheet" href="styles.css" />
