--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
           <li class="navbar__link" data-ref="contact">
             <a href="#contact">Contacto</a>
           </li>
+          <li>
+            <a id="insta" class="fa-brands fa-instagram" href="https://www.instagram.com/en_esta_tierra/"> </a>
+           </li>
         </ul>
       </div>
     </nav>
@@ -73,11 +76,11 @@
             </p>
 
             <p>
-              Somos un complejo familiar vas a encontrar lugares para descansar y para jugar.
-              Te invitamos a conocernos !
-              Estamos ubicados a media cuadra del mar en la zona centro de Villa Gesell (AV1 Nº1750)
+              Somos un complejo familiar en el que vas a poder descansar y disfrutar tus vacaciones.
+              Te invitamos a conocernos!
+              Estamos ubicados a media cuadra del mar en la zona centro de Villa Gesell.
               Ofrecemos alojamiento a familias y parejas que quieran venir a relajarse y estar en un espacio seguro y calmo. 
-              Contamos con departamentos de 1, 2 y 3 ambientes, luminosos y con vista a nuestros amplios jardines, completamente equipados, con tv directv, cocina completa, gas natural, agua corriente, wi-fi por fibra óptica, estacionamiento en predio, espacios de uso común, parrillas y quincho.
+              Contamos con departamentos de 1, 2 ambientes y duplex, luminosos y con vista a nuestros jardines, completamente equipados, con tv directv, cocina completa, gas natural, agua corriente, wi-fi por fibra óptica, estacionamiento en predio, espacios de uso común, parrillas y quincho.
             </p>
             <a
               class="button--cta"
@@ -103,7 +106,7 @@
             <i class="fa-solid fa-stroopwafel"></i>
             <h3>Parrillas</h3>
             <p>
-              Tenemos varias parrillas a disposicion, en temporada alta recomendamos reservarlas con anticipacion ya que son de uso común.
+              Tenemos varias parrillas a disposición, en temporada alta recomendamos reservarlas con anticipación ya que son de uso común.
             </p>
           </div>
           <div class="services__item">
@@ -117,28 +120,28 @@
             <i class="fa-solid fa-utensils"></i>
             <h3>Salon de usos multiples</h3>
             <p>
-              Salon techado que puede utilizar para desayunar por la mañana
+              Salón techado de usos múltiples.
             </p>
           </div>
           <div class="services__item">
             <i class="fa-solid fa-dumbbell"></i>
             <h3>Gimnasio</h3>
             <p>
-              Gimnasio equipado para realizar activadad fisica
+              Gimnasio equipado para realizar actividad fisica.
             </p>
           </div>
           <div class="services__item">
             <i class="fa-solid fa-tree"></i>
-            <h3>Areas comunes</h3>
+            <h3>Áreas comúnes</h3>
             <p>
-              Areas comunes amplias para descansar.
+              Áreas comúnes amplias al aire libre.
             </p>
           </div>
           <div class="services__item">
             <i class="fa-solid fa-sun"></i>
             <h3>Solarium</h3>
             <p>
-              Amplio deck para disfrutar del sol.
+              Deck para disfrutar del sol y descansar.
             </p>
           </div>
         </div>
@@ -215,7 +218,12 @@
               <img class="portfolio__img" alt="portfolio item" />
             </picture>
            </div>
-          
+           <div class="portfolio__item">
+            <picture>
+              <source type="image/jpeg" srcset="img/foto12.jpg" />
+              <img class="portfolio__img" alt="portfolio item" />
+            </picture>
+           </div>
           </div>
          </div>
       </div>
