--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <a href="#contact">Contacto</a>
           </li>
           <li>
-            <a id="insta" class="fa-brands fa-instagram" href="https://www.instagram.com/en_esta_tierra/"> </a>
+            <a class="fa-brands fa-instagram navbar__link" href="https://www.instagram.com/en_esta_tierra/"> </a>
            </li>
         </ul>
       </div>
