--- a/index.html
+++ b/index.html
@@ -272,6 +272,9 @@
       </div>
       <div class="about__logo"><img src="img/logo.png"/></div>
     </section>
+    <div class="map">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10307.796286836045!2d-56.97736812827153!3d-37.27137584475254!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x45f79a5bc8d9845c!2sEn%20Esta%20Tierra!5e0!3m2!1ses!2s!4v1657068200204!5m2!1ses!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
     <footer class="footer">
       <div class="container">
         <p>
