--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
     <title>En esta tierra - Villa Gesell</title>
   </head>
   <body>
+    
+    
     <nav class="navbar">
       <div class="container">
         <div class="navbar__logo">
@@ -50,14 +52,22 @@
             <a href="#services">Servicios</a>
           </li>
           <li class="navbar__link" data-ref="portfolio">
-            <a href="#portfolio">Complejo</a>
+            <a href="#portfolio">Fotos</a>
           </li>
           <li class="navbar__link" data-ref="contact">
             <a href="#contact">Contacto</a>
           </li>
           <li>
             <a class="fa-brands fa-instagram navbar__link" href="https://www.instagram.com/en_esta_tierra/"> </a>
-           </li>
+          </li>
+          <li>
+           <a
+            href="https://api.whatsapp.com/send?phone=+5491160921219&text=Hola!%20quisiera%20mas%20informacion%20para alquilar." target="_blank">
+              <div class="navbar__link">
+                <i class="fa-brands fa-whatsapp"></i>
+              </div>
+            </a>
+          </li>
         </ul>
       </div>
     </nav>
@@ -149,7 +159,7 @@
     </section>
     <section id="portfolio">
       <div class="container">
-        <h2 class="section__title">Complejo</h2>
+        <h2 class="section__title">Fotos</h2>
         <h3 class="section__subtitle">Algunas fotos del complejo, si queres ver mas podes seguinos en Instagram.</h3>
         <div class="portfolio__grid">
           <div class="portfolio__item">
