--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
       </div>
     </nav>
     <section id="home" class="home">
-      <iframe src='https://my.spline.design/untitled-d86a8072412ecbd048b17aa5544a1fea/' frameborder='0' width='100%' height='800px'></iframe>
-      <!-- <div class="home__background"></div> -->
+      <iframe class="iframe" src='https://my.spline.design/untitled-d86a8072412ecbd048b17aa5544a1fea/' frameborder='0' width='100%' height='800px'></iframe>
+      <div class="home__background"></div>
     </section>
     
     <section id="about">
