remove spline logo

--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
         </ul>
       </div>
     </nav>
-    <!-- <section id="home" class="home">
-      <iframe class="iframe" src='https://my.spline.design/untitled-d86a8072412ecbd048b17aa5544a1fea/' frameborder='0' width='100%' height='800px'></iframe>
+    <section id="home" class="home">
+      <!-- <iframe class="iframe" src='https://my.spline.design/untitled-d86a8072412ecbd048b17aa5544a1fea/' frameborder='0' width='100%' height='800px'></iframe> -->
       <div class="home__background"></div>
-    </section> -->
+    </section>
     
     <section id="about">
       <div class="container">
