background color changes

--- a/index.html
+++ b/index.html
@@ -88,22 +88,23 @@
             </p>
 
             <p>
-              Somos un complejo familiar en el que vas a poder descansar y disfrutar tus vacaciones.
-              Te invitamos a conocernos!
               Estamos ubicados a media cuadra del mar en la zona centro de Villa Gesell.
+              Somos un complejo familiar en el que vas a poder descansar y disfrutar tus vacaciones.
               Ofrecemos alojamiento a familias y parejas que quieran venir a relajarse y estar en un espacio seguro y calmo. 
-              Contamos con departamentos de 1, 2 ambientes y duplex, luminosos y con vista a nuestros jardines, completamente equipados, con tv directv, cocina completa, gas natural, agua corriente, wi-fi por fibra óptica, estacionamiento en predio, espacios de uso común, parrillas y quincho.
+              Contamos con departamentos de 1, 2 ambientes y duplex, luminosos y con vista a nuestros jardines, completamente equipados, con directv, cocina completa, gas natural, agua corriente, wi-fi por fibra óptica, estacionamiento dentro predio, espacios de uso común, parrillas y quincho.
+              Veni a conocernos!
+              Podes enviarnos tu consulta por cualquier de nuestras vías de contacto. Te esperamos!
             </p>
-            <a
+            <!-- <a
               class="button--cta"
               href="https://www.instagram.com/en_esta_tierra/"
               target="_blank"
               rel="noopener noreferrer"
             >
-              <button class="fa-brands fa-instagram"> Instagram
-              
+              <button class="fa-brands fa-instagram">
+           
               </button>
-            </a>
+            </a> -->
           </div>
          </div>
       </div>
@@ -130,9 +131,9 @@
           </div>
           <div class="services__item">
             <i class="fa-solid fa-utensils"></i>
-            <h3>Salon de usos multiples</h3>
+            <h3>Salón de usos multiples</h3>
             <p>
-              Salón techado de usos múltiples.
+              Salón techado de usos múltiples. Especial para utilizar en caso de lluvia.
             </p>
           </div>
           <div class="services__item">
@@ -162,7 +163,7 @@
     <section id="portfolio">
       <div class="container">
         <h2 class="section__title">Fotos</h2>
-        <h3 class="section__subtitle">Algunas fotos del complejo, si queres ver mas podes seguinos en Instagram.</h3>
+        <h3 class="section__subtitle">Algunas fotos del complejo, para ver mas podes seguirnos en Instagram.</h3>
         <div class="portfolio__grid">
           <div class="portfolio__item">
             <picture>
