--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="media.css" media="(max-width: 991px)" />
     <script src="https://kit.fontawesome.com/24b6734411.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <script src="https://unpkg.com/scrollreveal"></script>
     <title>En esta tierra - Villa Gesell</title>
   </head>
