--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         <h3 class="section__subtitle">Algunas fotos del complejo, para ver mas podes seguirnos en Instagram.</h3>
         <div class="portfolio__grid">
           <div class="portfolio__item">
-            <picture>
+            <picture class="foto">
               <source type="image/jpeg" srcset="img/foto1.jpg" />
               <img class="portfolio__img" alt="portfolio item" />
             </picture>
