favicon & description changes

--- a/index.html
+++ b/index.html
@@ -91,24 +91,33 @@
           <div class="about__description">
             <div class="about__logo"><img src="img/logo.png" /></div>
             <h2>En esta tierra</h2>
-            <p>
-              Complejo de departamentos en Villa Gesell, Buenos Aires,
-              Argentina.
-            </p>
+            <p>Complejo de departamentos en Villa Gesell, Argentina.</p>
 
             <p>
               Estamos ubicados a media cuadra del mar en la zona centro de Villa
-              Gesell. Somos un complejo familiar en el que vas a poder descansar
-              y disfrutar tus vacaciones. Ofrecemos alojamiento a familias y
-              parejas que quieran venir a relajarse y estar en un espacio seguro
-              y calmo. Contamos con departamentos de 1, 2 ambientes y duplex,
-              luminosos y con vista a nuestros jardines, completamente
-              equipados, con directv, cocina completa, gas natural, agua
-              corriente, wi-fi por fibra óptica, estacionamiento dentro predio,
-              espacios de uso común, parrillas y quincho. Veni a conocernos!
-              Podes enviarnos tu consulta por cualquier de nuestras vías de
-              contacto. Te esperamos!
+              Gesell. Ofrecemos alojamiento a familias y parejas que quieran
+              venir a relajarse y estar en un espacio seguro y tranquilo.
+              Contamos con departamentos de 1, 2 ambientes y duplex, luminosos y
+              completamente equipados.
             </p>
+            <br />
+            <ul>
+              <li class="lista">Directv</li>
+              <li class="lista">Cocina completa</li>
+              <li class="lista">Gas natural</li>
+              <li class="lista">Agua corriente</li>
+              <li class="lista">WI-FI fibra óptica</li>
+              <li class="lista">Estacionamiento dentro del predio</li>
+              <li class="lista">Espacios de uso común</li>
+              <li class="lista">Parrillas</li>
+              <li class="lista">Quincho</li>
+            </ul>
+            <br />
+            <h3>
+              Veni a conocernos! Podes enviarnos tu consulta por cualquiera de
+              nuestras vías de contacto. Te esperamos!
+            </h3>
+
             <!-- <a
               class="button--cta"
               href="https://www.instagram.com/en_esta_tierra/"
