lista de servicios

--- a/index.html
+++ b/index.html
@@ -102,15 +102,11 @@
             </p>
             <br />
             <ul>
-              <li class="lista">Directv</li>
-              <li class="lista">Cocina completa</li>
-              <li class="lista">Gas natural</li>
+              <li class="lista">TV DirecTV</li>
+              <li class="lista">Cocina y vajilla completa</li>
+              <li class="lista">Gas natural y calefacción</li>
               <li class="lista">Agua corriente</li>
               <li class="lista">WI-FI fibra óptica</li>
-              <li class="lista">Estacionamiento dentro del predio</li>
-              <li class="lista">Espacios de uso común</li>
-              <li class="lista">Parrillas</li>
-              <li class="lista">Quincho</li>
             </ul>
             <br />
             <h3>
