--- a/index.html
+++ b/index.html
@@ -145,6 +145,14 @@
             </p>
           </div>
           <div class="services__item">
+            <i class="fa-solid fa-video"></i>
+            <h3>Seguridad</h3>
+            <p>
+              Cámaras de seguridad en entradas y espacios comunes y sereno
+              durante toda la noche.
+            </p>
+          </div>
+          <div class="services__item">
             <i class="fa-solid fa-square-parking"></i>
             <h3>Estacionamiento</h3>
             <p>
