--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <div class="about__description">
             <div class="about__logo"><img src="img/logo.png" /></div>
             <h2>En esta tierra</h2>
-            <p>Complejo de departamentos en Villa Gesell, Argentina.</p>
+            <p>Complejo de departamentos.</p>
 
             <p>
               Estamos ubicados a media cuadra del mar en la zona centro de Villa
@@ -102,7 +102,7 @@
             </p>
             <br />
             <ul>
-              <li class="lista">TV DirecTV</li>
+              <li class="lista">DirecTV</li>
               <li class="lista">Cocina y vajilla completa</li>
               <li class="lista">Gas natural y calefacción</li>
               <li class="lista">Agua corriente</li>
@@ -148,7 +148,7 @@
             <i class="fa-solid fa-video"></i>
             <h3>Seguridad</h3>
             <p>
-              Cámaras de seguridad en entradas y espacios comunes y sereno
+              Cámaras de seguridad en entradas y espacios comúnes y sereno
               durante toda la noche.
             </p>
           </div>
@@ -181,7 +181,7 @@
           <div class="services__item">
             <i class="fa-solid fa-sun"></i>
             <h3>Solarium</h3>
-            <p>Deck para disfrutar del sol y descansar.</p>
+            <p>Deck con reposeras para disfrutar del sol y descansar.</p>
           </div>
         </div>
       </div>
