--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
             <i class="fa-solid fa-stroopwafel"></i>
             <h3>Parrillas</h3>
             <p>
-              Tenemos varias parrillas a disposición, en temporada alta
-              recomendamos reservarlas con anticipación ya que son de uso común.
+              Tenemos parrillas a disposición, en temporada alta recomendamos
+              reservarlas con anticipación ya que son de uso común.
             </p>
           </div>
           <div class="services__item">
@@ -307,34 +307,34 @@
         </h3>
         <div class="popup-gallery">
           <a href="img/int1.jpg"
-            ><img src="img/int1.jpg" width="150" height="150"
+            ><img src="img/int1.jpg" width="300" height="300"
           /></a>
           <a href="img/int2.jpg"
-            ><img src="img/int2.jpg" width="150" height="150"
+            ><img src="img/int2.jpg" width="300" height="300"
           /></a>
           <a href="img/int3.jpg"
-            ><img src="img/int3.jpg" width="150" height="150"
+            ><img src="img/int3.jpg" width="300" height="300"
           /></a>
           <a href="img/int4.jpg"
-            ><img src="img/int4.jpg" width="150" height="150"
+            ><img src="img/int4.jpg" width="300" height="300"
           /></a>
           <a href="img/int5.jpg"
-            ><img src="img/int5.jpg" width="150" height="150"
+            ><img src="img/int5.jpg" width="300" height="300"
           /></a>
           <a href="img/int6.jpg"
-            ><img src="img/int6.jpg" width="150" height="150"
+            ><img src="img/int6.jpg" width="300" height="300"
           /></a>
           <a href="img/int7.jpg"
-            ><img src="img/int7.jpg" width="150" height="150"
+            ><img src="img/int7.jpg" width="300" height="300"
           /></a>
           <a href="img/int8.jpg"
-            ><img src="img/int8.jpg" width="150" height="150"
+            ><img src="img/int8.jpg" width="300" height="300"
           /></a>
           <a href="img/int9.jpg"
-            ><img src="img/int9.jpg" width="150" height="150"
+            ><img src="img/int9.jpg" width="300" height="300"
           /></a>
           <a href="img/int10.jpg"
-            ><img src="img/int10.jpg" width="150" height="150"
+            ><img src="img/int10.jpg" width="300" height="300"
           /></a>
         </div>
       </div>
@@ -413,7 +413,7 @@
     ></script>
     <!-- Magnific Popup core JS file -->
     <script src="jquery.magnific-popup.min.js"></script>
-
+    <!-- 
     <script>
       $(document).ready(function () {
         $('.view').magnificPopup({
@@ -425,9 +425,27 @@
           },
         });
       });
-    </script>
+    </script> -->
     <script>
       $(document).ready(function () {
+        $('.portfolio__grid').magnificPopup({
+          delegate: 'a',
+          type: 'image',
+          tLoading: 'Loading image #%curr%...',
+          mainClass: 'mfp-img-mobile',
+          gallery: {
+            enabled: true,
+            navigateByImgClick: true,
+            preload: [0, 1], // Will preload 0 - before current, and 1 after the current image
+          },
+          image: {
+            tError:
+              '<a href="%url%">The image #%curr%</a> could not be loaded.',
+            titleSrc: function (item) {
+              return '<small>En Esta Tierra - Interiores</small>';
+            },
+          },
+        });
         $('.popup-gallery').magnificPopup({
           delegate: 'a',
           type: 'image',
