new files & style changes

--- a/interiores.html
+++ b/interiores.html
@@ -45,17 +45,9 @@
         </div>
         <ul class="navbar__links">
           <li class="navbar__link active" data-ref="home">
-            <a href="#home">Inicio</a>
+            <a href="index.html">Inicio</a>
           </li>
-          <li class="navbar__link" data-ref="about">
-            <a href="#about">Nosotros</a>
-          </li>
-          <li class="navbar__link" data-ref="services">
-            <a href="#services">Servicios</a>
-          </li>
-          <li class="navbar__link" data-ref="portfolio">
-            <a href="#portfolio">Fotos</a>
-          </li>
+
           <li class="navbar__link" data-ref="contact">
             <a href="#contact">Contacto</a>
           </li>
@@ -79,126 +71,45 @@
         </ul>
       </div>
     </nav>
-    <section id="home" class="home">
-      <div class="home__background"></div>
-    </section>
 
-    <section id="about">
-      <div class="container">
-        <h2 class="section__title">Nosotros</h2>
-        <div class="about__grid">
-          <div class="about__description">
-            <div class="about__logo"><img src="img/logo.png" /></div>
-            <h2>En esta tierra</h2>
-            <p>Complejo de departamentos.</p>
-
-            <p>
-              Estamos ubicados a media cuadra del mar en la zona centro de Villa
-              Gesell. Ofrecemos alojamiento a familias y parejas que quieran
-              venir a relajarse y estar en un espacio seguro y tranquilo.
-              Contamos con departamentos de 1, 2 ambientes y duplex, luminosos y
-              completamente equipados.
-            </p>
-            <br />
-            <ul>
-              <li class="lista">DirecTV</li>
-              <li class="lista">Cocina y vajilla completa</li>
-              <li class="lista">Gas natural y calefacción</li>
-              <li class="lista">Agua corriente</li>
-              <li class="lista">WI-FI fibra óptica</li>
-            </ul>
-            <br />
-            <h3>
-              Veni a conocernos! Podes enviarnos tu consulta por cualquiera de
-              nuestras vías de contacto. Te esperamos!
-            </h3>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section id="services">
-      <div class="container">
-        <h2 class="section__title">Servicios</h2>
-        <h3 class="section__subtitle">
-          Algunos de los servicios que ofrecemos
-        </h3>
-        <div class="services__grid">
-          <div class="services__item">
-            <i class="fa-solid fa-stroopwafel"></i>
-            <h3>Parrillas</h3>
-            <p>
-              Tenemos parrillas a disposición, en temporada alta recomendamos
-              reservarlas con anticipación ya que son de uso común.
-            </p>
-          </div>
-          <div class="services__item">
-            <i class="fa-solid fa-video"></i>
-            <h3>Seguridad</h3>
-            <p>
-              Cámaras de seguridad en entradas y espacios comúnes y sereno
-              durante toda la noche.
-            </p>
-          </div>
-          <div class="services__item">
-            <i class="fa-solid fa-square-parking"></i>
-            <h3>Estacionamiento</h3>
-            <p>
-              Contamos con estacionamiento dentro del complejo, con capacidad
-              limitada por orden de llegada.
-            </p>
-          </div>
-          <div class="services__item">
-            <i class="fa-solid fa-utensils"></i>
-            <h3>Salón de usos multiples</h3>
-            <p>
-              Salón techado de usos múltiples. Especial para utilizar en caso de
-              lluvia.
-            </p>
-          </div>
-          <div class="services__item">
-            <i class="fa-solid fa-dumbbell"></i>
-            <h3>Gimnasio</h3>
-            <p>Gimnasio equipado para realizar actividad fisica.</p>
-          </div>
-          <div class="services__item">
-            <i class="fa-solid fa-tree"></i>
-            <h3>Áreas comúnes</h3>
-            <p>Áreas comúnes amplias al aire libre.</p>
-          </div>
-          <div class="services__item">
-            <i class="fa-solid fa-sun"></i>
-            <h3>Solarium</h3>
-            <p>Deck con reposeras para disfrutar del sol y descansar.</p>
-          </div>
-        </div>
-      </div>
-    </section>
     <section id="portfolio">
       <div class="container">
         <h2 class="section__title">Fotos</h2>
-        <h3 class="section__subtitle">
-          Algunas fotos del complejo, para ver mas podes seguirnos en Instagram.
+
+        <h3 class="section__subtitle__fotos">
+          Fotos de interiores de algunos de nuestros departamentos.
         </h3>
-        <div class="fotos-exteriores">
-          <h4 class="fotos-title">Fotos exteriores</h4>
-          <a href="exteriores.html">
-            <img
-              class="portfolio__img"
-              alt="portfolio item"
-              src="img/foto2.jpg"
-            />
-          </a>
-        </div>
-        <div class="fotos-interiores">
-          <h4 class="fotos-title">Fotos interiores</h4>
-          <a href="interiores.html">
-            <img
-              class="portfolio__img"
-              alt="portfolio item"
-              src="img/int4.jpg"
-            />
-          </a>
+        <div class="popup-gallery">
+          <a href="img/int1.jpg"
+            ><img src="img/int1.jpg" width="300" height="300"
+          /></a>
+          <a href="img/int2.jpg"
+            ><img src="img/int2.jpg" width="300" height="300"
+          /></a>
+          <a href="img/int3.jpg"
+            ><img src="img/int3.jpg" width="300" height="300"
+          /></a>
+          <a href="img/int4.jpg"
+            ><img src="img/int4.jpg" width="300" height="300"
+          /></a>
+          <a href="img/int5.jpg"
+            ><img src="img/int5.jpg" width="300" height="300"
+          /></a>
+          <a href="img/int6.jpg"
+            ><img src="img/int6.jpg" width="300" height="300"
+          /></a>
+          <a href="img/int7.jpg"
+            ><img src="img/int7.jpg" width="300" height="300"
+          /></a>
+          <a href="img/int8.jpg"
+            ><img src="img/int8.jpg" width="300" height="300"
+          /></a>
+          <a href="img/int9.jpg"
+            ><img src="img/int9.jpg" width="300" height="300"
+          /></a>
+          <a href="img/int10.jpg"
+            ><img src="img/int10.jpg" width="300" height="300"
+          /></a>
         </div>
       </div>
     </section>
@@ -248,17 +159,7 @@
       </div>
       <div class="about__logo"><img src="img/logo.png" /></div>
     </section>
-    <div class="map">
-      <iframe
-        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10307.796286836045!2d-56.97736812827153!3d-37.27137584475254!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x45f79a5bc8d9845c!2sEn%20Esta%20Tierra!5e0!3m2!1ses!2s!4v1657068200204!5m2!1ses!2s"
-        width="600"
-        height="450"
-        style="border: 0"
-        allowfullscreen=""
-        loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade"
-      ></iframe>
-    </div>
+
     <footer class="footer">
       <div class="container">
         <p>
