--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             <img
               class="portfolio__img"
               alt="portfolio item"
-              src="img/int4.jpg"
+              src="img/int.jpg"
             />
           </a>
         </div>
