--- a/exteriores.html
+++ b/exteriores.html
@@ -33,11 +33,11 @@
     <title>En esta tierra - Villa Gesell</title>
   </head>
   <body>
-    <nav class="navbar">
+    <nav class="navbar2">
       <div class="container">
         <div class="navbar__logo">
           <p class="navbar__title">
-            <img id="logo" src="img/logo.png" />
+            <img id="logo" src="img/logo2.png" />
           </p>
         </div>
         <div class="navbar__menu">
@@ -47,7 +47,7 @@
           <li class="navbar__link active" data-ref="home">
             <a href="index.html">Inicio</a>
           </li>
-         
+
           <li class="navbar__link" data-ref="contact">
             <a href="#contact">Contacto</a>
           </li>
@@ -71,15 +71,13 @@
         </ul>
       </div>
     </nav>
- 
 
-   
-    
     <section id="portfolio">
       <div class="container">
         <h2 class="section__title">Fotos</h2>
         <h3 class="section__subtitle">
-          Algunas fotos del exterior del complejo, para ver mas podes seguirnos en Instagram.
+          Algunas fotos del exterior del complejo, para ver mas podes seguirnos
+          en Instagram.
         </h3>
         <div class="portfolio__grid">
           <div class="portfolio__item">
@@ -191,52 +189,54 @@
             </a>
           </div>
         </div>
-        <section id="contact">
-          <div class="container">
-            <h2 class="section__title">Contacto</h2>
-            <h3 class="section__subtitle">
-              Esperamos tu consulta en cualquiera de nuestras redes.
-            </h3>
-            <div class="contact__grid">
-              <a
-                href="https://www.instagram.com/en_esta_tierra/"
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                <div class="contact__item">
-                  <i class="fa-brands fa-instagram"></i>
-                </div>
-              </a>
-              <a
-                href="https://api.whatsapp.com/send?phone=+5491160921219&text=Hola!%20quisiera%20mas%20informacion%20para alquilar."
-                target="_blank"
-              >
-                <div class="contact__item">
-                  <i class="fa-brands fa-whatsapp"></i>
-                </div>
-              </a>
-              <a
-                href="mailto:arqalon@hotmail.com"
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                <div class="contact__item">
-                  <i class="fa-solid fa-envelope"></i>
-                </div>
-              </a>
-              <a
-                href="https://www.facebook.com/enestatierragesell"
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                <div class="contact__item">
-                  <i class="fa-brands fa-facebook"></i>
-                </div>
-              </a>
+      </div>
+    </section>
+    <section id="contact">
+      <div class="container">
+        <h2 class="section__title">Contacto</h2>
+        <h3 class="section__subtitle">
+          Esperamos tu consulta en cualquiera de nuestras redes.
+        </h3>
+        <div class="contact__grid">
+          <a
+            href="https://www.instagram.com/en_esta_tierra/"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <div class="contact__item">
+              <i class="fa-brands fa-instagram"></i>
             </div>
-          </div>
-          <div class="about__logo"><img src="img/logo.png" /></div>
-        </section>
+          </a>
+          <a
+            href="https://api.whatsapp.com/send?phone=+5491160921219&text=Hola!%20quisiera%20mas%20informacion%20para alquilar."
+            target="_blank"
+          >
+            <div class="contact__item">
+              <i class="fa-brands fa-whatsapp"></i>
+            </div>
+          </a>
+          <a
+            href="mailto:arqalon@hotmail.com"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <div class="contact__item">
+              <i class="fa-solid fa-envelope"></i>
+            </div>
+          </a>
+          <a
+            href="https://www.facebook.com/enestatierragesell"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <div class="contact__item">
+              <i class="fa-brands fa-facebook"></i>
+            </div>
+          </a>
+        </div>
+      </div>
+      <div class="about__logo"><img src="img/logo.png" /></div>
+    </section>
     <footer class="footer">
       <div class="container">
         <p>
@@ -246,7 +246,7 @@
       </div>
     </footer>
 
-    <script async src="index.js"></script>
+    <script async src="indexb.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.1.1.min.js"
       integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
