--- a/interiores.html
+++ b/interiores.html
@@ -33,11 +33,11 @@
     <title>En esta tierra - Villa Gesell</title>
   </head>
   <body>
-    <nav class="navbar">
+    <nav class="navbar2">
       <div class="container">
         <div class="navbar__logo">
           <p class="navbar__title">
-            <img id="logo" src="img/logo.png" />
+            <img id="logo" src="img/logo2.png" />
           </p>
         </div>
         <div class="navbar__menu">
@@ -169,7 +169,7 @@
       </div>
     </footer>
 
-    <script async src="index.js"></script>
+    <script async src="indexb.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.1.1.min.js"
       integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
