--- a/interiores.html
+++ b/interiores.html
@@ -20,7 +20,7 @@
 
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico" />
     <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="media.css" media="(max-width: 991px)" />
+    <!-- <link rel="stylesheet" href="media.css" media="(max-width: 991px)" /> -->
     <script
       src="https://kit.fontawesome.com/24b6734411.js"
       crossorigin="anonymous"
@@ -51,13 +51,13 @@
           <li class="navbar__link" data-ref="contact">
             <a href="#contact">Contacto</a>
           </li>
-          <li>
+          <!-- <li>
             <a
               class="fa-brands fa-instagram navbar__link"
               href="https://www.instagram.com/en_esta_tierra/"
             >
             </a>
-          </li>
+          </li> -->
           <li>
             <a
               href="https://api.whatsapp.com/send?phone=+5491160921219&text=Hola!%20quisiera%20mas%20informacion%20para alquilar."
