--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             <h3>Estacionamiento</h3>
             <p>
               Contamos con estacionamiento dentro del complejo, con capacidad
-              limitada por orden de llegada.
+              limitada, por orden de llegada.
             </p>
           </div>
           <div class="services__item">
