--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
       <div class="home__background"></div>
     </section>
 
+
+
+
     <section id="about">
       <div class="container">
         <h2 class="section__title">Nosotros</h2>
@@ -116,6 +119,10 @@
         </div>
       </div>
     </section>
+
+
+<!-- <img src="img/colores.png" width="100%" alt="separador" /> -->
+
 
     <section id="services">
       <div class="container">
@@ -174,6 +181,10 @@
         </div>
       </div>
     </section>
+
+
+<!-- <img src="img/colores.png" width="100%" alt="separador" /> -->
+
     <section id="portfolio">
       <div class="container">
         <h2 class="section__title">Fotos</h2>
@@ -202,6 +213,10 @@
         </div>
       </div>
     </section>
+
+
+<!-- <img src="img/colores.png" width="100%" alt="separador" /> -->
+
     <section id="contact">
       <div class="container">
         <h2 class="section__title">Contacto</h2>
@@ -248,6 +263,7 @@
       </div>
       <div class="about__logo"><img src="img/logo.png" /></div>
     </section>
+    
     <div class="map">
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10307.796286836045!2d-56.97736812827153!3d-37.27137584475254!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x45f79a5bc8d9845c!2sEn%20Esta%20Tierra!5e0!3m2!1ses!2s!4v1657068200204!5m2!1ses!2s"
